Fixed username alignment

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -444,7 +444,7 @@ header.user {
 	display: inline-block;
 	min-height: 100%;
 	padding: 1em;
-	width: 75%;
+	width: 85%;
     }
     img.avatar {
 	position: absolute;
